[package]
name = "mrgraph"
version = "0.0.2"
edition = "2021"
description = "High-level Meritrank library"
license = "MIT"

[[bin]]
name = "mrgraph"
path = "src/main.rs"

#[[test]]
#name = "test_dumps"
#path = "tests/test_dumps.rs"

[lib]
name = "mrgraph"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
meritrank2 = "0.5.2"
itertools = "0.12.0"
lazy_static = "1.4"
thiserror = "1.0.58"

